--- a/page1.html
+++ b/page1.html
@@ -47,7 +47,8 @@
     <ol>
         <li>Python</li>
         <li>java</li>
-        <li>js</li>
+        <li>JavaScript</li>
+        
     </ol>
     <hr>
 
